Added Donation store and Staff Application

--- a/index.html
+++ b/index.html
@@ -31,9 +31,12 @@ License: Creative Commons Attribution
 
 			<nav id="mainnav">
   				<ul>
-                            		<li class="selected-item"><a href="index.html">How to Join</a></li>
-                           		 <li><a href="help.html">Help & Commands</a></li>
-                        	</ul>
+                        <li class="selected-item"><a href="index.html">How to Join</a></li>
+                        <li><a href="help.html">Help & Commands</a></li>
+                        <li><a href="http://survivaltimeminecraft.buycraft.net">Donation Store</a></li>
+                        <li><a href="https://goo.gl/forms/RcKK5vZFLtsVhNX72">Staff Application</a></li>
+                    
+                </ul>
 			</nav>
 
 			
