--- a/help.html
+++ b/help.html
@@ -230,7 +230,9 @@ License: Creative Commons Attribution
 				</table>
 				<p>&nbsp;</p>
 				<h3>Additional Questions & Information</h3>
-				<p>If you need any more help, wait until an Admin or Moderator is on the server to assist you. If you want to apply to become an Admin, Moderator, or Builder for the server, please contact an admin to send in a brief application indicating why you're interested!</p>
+				<p>If you need any more help, wait until an Admin or Moderator is on the server to assist you. If you want to apply to become a Staff Member for the server, use Staff Application button below or in the sidebar! Make sure your application is well written and thoughtful, we're looking for the best!</p>
+                <a href="https://goo.gl/forms/RcKK5vZFLtsVhNX72" class="button">Staff Application</a>
+		      </article>
 				<p><b>Have fun!</b></p>
 				
 	
