Added Rules Page and Discord

--- a/help.html
+++ b/help.html
@@ -33,7 +33,9 @@ License: Creative Commons Attribution
   				<ul>
                             		<li><a href="index.html">How to Join</a></li>
                            		 <li class="selected-item"><a href="help.html">Help & Commands</a></li>
-                                <li><a href="http://survivaltimeminecraft.buycraft.net">Donation Store</a></li>
+                                <li>
+                                    <li><a href="rules.html">Rules</a></li>
+                                    <li><a href="http://survivaltimeminecraft.buycraft.net">Donation Store</a></li>
                                 <li><a href="https://goo.gl/forms/RcKK5vZFLtsVhNX72">Staff Application</a></li>
                         	</ul>
 			</nav>
