Added Staff Rule

--- a/rules.html
+++ b/rules.html
@@ -73,6 +73,7 @@ License: Creative Commons Attribution
                 <p>21) Do not make offensive builds or banners.</p>
                 <p>22) No offensive in game names.</p>
                 <p>23) You may only considered to become a staff member after you have played on the server for more than a week.</p>
+                <p>23) Staff may not abuse their powers/priviledges while playing survival. If they do, they may be demoted, or banned if they violate rules.</p>
 
             </ul>
             
